--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,8 @@
-name: logger_android_like
+name: flutter_logger_android_like
 version: 1.0.0
 
 description: A simple logger similar to Android devices one
-author: Mobizel <flutter@mobizel.com>
-homepage: https://github.com/mobizel/logger-android-like
+homepage: https://github.com/mobizel/flutter-logger-android-like
 
 environment:
   sdk: '>=2.0.0 <3.0.0'
